--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "discord.js": "^11.1.0",
     "request": "^2.81.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "crypto-js": "^3.1.9-1"
   },
   "keywords": [],
   "author": "",
